[gd_scene load_steps=49 format=3 uid="uid://ctnbblculty6f"]

[ext_resource type="Script" uid="uid://bw5ct5u5wknqj" path="res://source/03 - Entities/Entity.gd" id="1_3l1tq"]
[ext_resource type="Script" uid="uid://bvgrlnecek7v4" path="res://source/03 - Entities/Entity_FSM.gd" id="2_ttrxs"]
[ext_resource type="Script" uid="uid://dvw7w7se2pacu" path="res://source/03 - Entities/00 - Humanoid/Humanoid_Customization.gd" id="3_5a1ol"]
[ext_resource type="Shader" uid="uid://c2cixivxs800u" path="res://assets/04 - Shaders/Shader-ColorSwap.gdshader" id="4_j7j7c"]
[ext_resource type="Texture2D" uid="uid://btfpmpqqkkkq2" path="res://assets/03 - Entities/00 - Humanoid/00 - Base/base_average_average.png" id="5_1bl6d"]
[ext_resource type="Script" uid="uid://ckyxbbepvxqt2" path="res://source/03 - Entities/00 - Humanoid/Humanoid_Bases.gd" id="6_hhxq1"]
[ext_resource type="Texture2D" uid="uid://cy7ntjvll0djw" path="res://assets/03 - Entities/00 - Humanoid/00 - Base/base_short_average.png" id="7_jyye7"]
[ext_resource type="Texture2D" uid="uid://c231vxv1xwxuj" path="res://assets/03 - Entities/00 - Humanoid/01 - Hair/bald.png" id="7_w6nft"]
[ext_resource type="Texture2D" uid="uid://b0jc5wnup47py" path="res://assets/03 - Entities/00 - Humanoid/00 - Base/base_tall_average.png" id="8_6a5nf"]
[ext_resource type="Script" uid="uid://b6cmoq1mh7lho" path="res://source/03 - Entities/00 - Humanoid/Humanoid_Hairs.gd" id="8_7l58v"]
[ext_resource type="Texture2D" uid="uid://b0ho51jo05jkm" path="res://assets/03 - Entities/00 - Humanoid/00 - Base/base_short_chub.png" id="9_elo1r"]
[ext_resource type="Texture2D" uid="uid://2u2vwu1kxeqj" path="res://assets/03 - Entities/00 - Humanoid/01 - Hair/lumberjack_hair_a.png" id="9_ttrxs"]
[ext_resource type="Texture2D" uid="uid://c6g4e5ietrb4s" path="res://assets/03 - Entities/00 - Humanoid/01 - Hair/lumberjack_hair_s.png" id="10_j7j7c"]
[ext_resource type="Texture2D" uid="uid://3nutagt7vmnp" path="res://assets/03 - Entities/00 - Humanoid/00 - Base/base_average_chub.png" id="10_uebvu"]
[ext_resource type="Texture2D" uid="uid://cvqi2q3e5st48" path="res://assets/03 - Entities/00 - Humanoid/01 - Hair/lumberjack_hair_t.png" id="11_1bl6d"]
[ext_resource type="Texture2D" uid="uid://cafix1b6k3m0" path="res://assets/03 - Entities/00 - Humanoid/00 - Base/base_tall_chub.png" id="11_316is"]
[ext_resource type="Script" uid="uid://6f1g6ggxc64" path="res://source/03 - Entities/00 - Humanoid/Humanoid_Beards.gd" id="17_6a5nf"]
[ext_resource type="Texture2D" uid="uid://bcb7jj6sb5vk8" path="res://assets/03 - Entities/00 - Humanoid/02 - Beard/clean.png" id="18_ifgdf"]
[ext_resource type="Texture2D" uid="uid://cfekti8aw5004" path="res://assets/03 - Entities/00 - Humanoid/02 - Beard/lumberjack_beard_s.png" id="19_ak2ai"]
[ext_resource type="Texture2D" uid="uid://b4juqwppff3w5" path="res://assets/03 - Entities/00 - Humanoid/02 - Beard/lumberjack_beard_a.png" id="20_fnlfn"]
[ext_resource type="Texture2D" uid="uid://b217g27ioal4n" path="res://assets/03 - Entities/00 - Humanoid/02 - Beard/lumberjack_beard_t.png" id="21_pppck"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ai6v3"]
shader = ExtResource("4_j7j7c")
shader_parameter/old_outline1 = Color(0.121569, 0.0862745, 0.211765, 1)
shader_parameter/old_shadow1 = Color(0.211765, 0.203922, 0.356863, 1)
shader_parameter/old_base1 = Color(0.298039, 0.317647, 0.501961, 1)
shader_parameter/old_highlight1 = Color(0.439216, 0.454902, 0.607843, 1)
shader_parameter/old_outline2 = Color(0, 0, 0, 1)
shader_parameter/old_shadow2 = Color(0.156863, 0.298039, 0.247059, 1)
shader_parameter/old_base2 = Color(1, 1, 1, 1)
shader_parameter/old_highlight2 = Color(0.298039, 0.501961, 0.407843, 1)
shader_parameter/old_outline3 = Color(0, 0, 0, 1)
shader_parameter/old_shadow3 = Color(0.298039, 0.156863, 0.156863, 1)
shader_parameter/old_base3 = Color(1, 1, 1, 1)
shader_parameter/old_highlight3 = Color(0.501961, 0.298039, 0.298039, 1)
shader_parameter/new_outline1 = Color(0.121569, 0.0862745, 0.211765, 1)
shader_parameter/new_shadow1 = Color(0.211765, 0.203922, 0.356863, 1)
shader_parameter/new_base1 = Color(0.298039, 0.317647, 0.501961, 1)
shader_parameter/new_highlight1 = Color(0.439216, 0.454902, 0.607843, 1)
shader_parameter/new_outline2 = Color(0, 0, 0, 1)
shader_parameter/new_shadow2 = Color(0.156863, 0.298039, 0.247059, 1)
shader_parameter/new_base2 = Color(1, 1, 1, 1)
shader_parameter/new_highlight2 = Color(0.298039, 0.501961, 0.407843, 1)
shader_parameter/new_outline3 = Color(0, 0, 0, 1)
shader_parameter/new_shadow3 = Color(0.298039, 0.156863, 0.156863, 1)
shader_parameter/new_base3 = Color(1, 1, 1, 1)
shader_parameter/new_highlight3 = Color(0.501961, 0.298039, 0.298039, 1)

[sub_resource type="Animation" id="Animation_kjtp0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_ai6v3"]
resource_name = "idle_down"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_ftlax"]
resource_name = "idle_left"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_x2cbb"]
resource_name = "idle_right"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_k5llr"]
resource_name = "idle_up"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_01a5d"]
resource_name = "walk_down"
length = 0.48
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_so8uh"]
resource_name = "walk_left"
length = 0.48
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_73qvu"]
resource_name = "walk_right"
length = 0.48
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.00288591, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_yu20t"]
resource_name = "walk_up"
length = 0.48
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite_Base:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite_Hair:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite_Beard:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01a5d"]
_data = {
&"RESET": SubResource("Animation_kjtp0"),
&"idle_down": SubResource("Animation_ai6v3"),
&"idle_left": SubResource("Animation_ftlax"),
&"idle_right": SubResource("Animation_x2cbb"),
&"idle_up": SubResource("Animation_k5llr"),
&"walk_down": SubResource("Animation_01a5d"),
&"walk_left": SubResource("Animation_so8uh"),
&"walk_right": SubResource("Animation_73qvu"),
&"walk_up": SubResource("Animation_yu20t")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yu20t"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7i3x6"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kjtp0"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_so8uh"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_01a5d"]
blend_point_0/node = SubResource("AnimationNodeAnimation_yu20t")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_7i3x6")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_kjtp0")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_so8uh")
blend_point_3/pos = Vector2(0, -1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_01a5d"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ai6v3"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ftlax"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x2cbb"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_k5llr"]
blend_point_0/node = SubResource("AnimationNodeAnimation_01a5d")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ai6v3")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_ftlax")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_x2cbb")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yu20t"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7i3x6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kjtp0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_so8uh"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_7yhcf"]
states/End/position = Vector2(615, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_01a5d")
states/Idle/position = Vector2(448, 100)
states/Start/position = Vector2(300, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_k5llr")
states/Walk/position = Vector2(448, 214)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_yu20t"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_7i3x6"), "Idle", "End", SubResource("AnimationNodeStateMachineTransition_kjtp0"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_so8uh")]
graph_offset = Vector2(-145, 4)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kik4i"]
radius = 2.0
height = 6.0

[node name="Entity" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 93
script = ExtResource("1_3l1tq")

[node name="Scripts" type="Node2D" parent="."]

[node name="Entity_StateMachine" type="Node2D" parent="Scripts"]
script = ExtResource("2_ttrxs")

[node name="Entity_Customization" type="Node2D" parent="Scripts"]
script = ExtResource("3_5a1ol")

[node name="Facing" type="Node2D" parent="."]

[node name="Sprites" type="Node2D" parent="."]

[node name="Sprite_Base" type="Sprite2D" parent="Sprites"]
material = SubResource("ShaderMaterial_ai6v3")
texture = ExtResource("5_1bl6d")
offset = Vector2(0, -16)
hframes = 4
vframes = 4
frame = 12
script = ExtResource("6_hhxq1")
bases_average = Array[Resource]([ExtResource("7_jyye7"), ExtResource("5_1bl6d"), ExtResource("8_6a5nf")])
bases_chub = Array[Resource]([ExtResource("9_elo1r"), ExtResource("10_uebvu"), ExtResource("11_316is")])

[node name="Sprite_Hair" type="Sprite2D" parent="Sprites"]
texture = ExtResource("9_ttrxs")
offset = Vector2(0, -16)
hframes = 4
vframes = 4
frame = 12
script = ExtResource("8_7l58v")
hairs_short = Array[Resource]([ExtResource("7_w6nft"), ExtResource("10_j7j7c")])
hairs_average = Array[Resource]([ExtResource("7_w6nft"), ExtResource("9_ttrxs")])
hairs_tall = Array[Resource]([ExtResource("7_w6nft"), ExtResource("11_1bl6d")])

[node name="Sprite_Beard" type="Sprite2D" parent="Sprites"]
texture = ExtResource("20_fnlfn")
offset = Vector2(0, -16)
hframes = 4
vframes = 4
frame = 12
script = ExtResource("17_6a5nf")
beards_short = Array[Resource]([ExtResource("18_ifgdf"), ExtResource("19_ak2ai")])
beards_average = Array[Resource]([ExtResource("18_ifgdf"), ExtResource("20_fnlfn")])
beards_tall = Array[Resource]([ExtResource("18_ifgdf"), ExtResource("21_pppck")])

[node name="Raycasts" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="Ray_ObjectDetection" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 16)
collision_mask = 80
hit_from_inside = true

[node name="AnimationPlayers" type="Node2D" parent="."]

[node name="AnimPlayer_Sprite" type="AnimationPlayer" parent="AnimationPlayers"]
libraries = {
&"": SubResource("AnimationLibrary_01a5d")
}
autoplay = "idle_down"

[node name="AnimPlayer_Effects" type="AnimationPlayer" parent="AnimationPlayers"]

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayers"]
active = false
tree_root = SubResource("AnimationNodeStateMachine_7yhcf")
anim_player = NodePath("../AnimPlayer_Sprite")
parameters/Idle/blend_position = Vector2(-0.00258398, -0.00223708)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="Outputs" type="Node2D" parent="."]
visible = false

[node name="Output_State" type="Label" parent="Outputs"]
offset_right = 40.0
offset_bottom = 23.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_kik4i")
